<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".core.presenter.main.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/coordinatorLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SearchView
                android:id="@+id/sv_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:background="@drawable/outlined_search_view"
                android:closeIcon="@null"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/searchView_hint"
                app:closeIcon="@null" />

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/sv_province"
                android:layout_alignBottom="@id/sv_province"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/condes_setting"
                android:src="@drawable/ic_baseline_settings" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sv_province"
                android:layout_marginStart="12dp"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_disasterType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_flood"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_flood" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_earthquake"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_earthquake" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_fire"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_fire" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_haze"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_haze" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_wind"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_wind" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_volcano"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="?attr/colorOnPrimary"
                        android:text="@string/ds_volcano" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/bottom_sheet"
            style="@style/Custom.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            app:behavior_peekHeight="100dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                    android:id="@+id/drag_handle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_disaster_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/drag_handle"
                    android:layout_marginStart="8dp"
                    android:text="@string/disaster_header"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_disaster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_disaster_header"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/tv_empty_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_disaster_header"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:text="@string/empty_data"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </RelativeLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
