...
    <string name="setting_header">Setting</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_notif_pref">Dummy Notification</string>

    <!-- Activity Main -->
    <string name="searchView_hint">Search for a Province</string>
...
